Initial commit: URL Shortener Service